--- a/Final Documentation/Appendix/References.tex
+++ b/Final Documentation/Appendix/References.tex
@@ -2,20 +2,20 @@
 	
 	\bibitem{bx-grace} K. Czarnecki, J. N. Foster, Z. Hu, R. L\"ammel, A. Sch\"urr, and J. F. Terwilliger,  {\em Bidirectional Transformations: A Cross-Discipline Perspective}, GRACE International Meeting , Shonan, Japan, 2008.
 	
-	\bibitem{bx-dagstuhl} Z. Hu, A. Sch\"urr, P. Stevens, and J. Terwilliger, {\em Dagstuhl Seminar \#11031 on Bidirectional Transformations "bx"}, Dagstuhl Reports, vol. 1, Issue 1, pages 42-67, January 16-21, 2011.
+	\bibitem{bx-dagstuhl} Z. Hu, A. Sch\"urr, P. Stevens, and J. Terwilliger, {\em Dagstuhl Seminar \#11031 on Bidirectional Transformations "bx"}, Dagstuhl Reports, vol. 1, issue 1, pages 42-67, January 16-21, 2011.
 	
 	\bibitem{bx-theoryandappl} J. Gibbons, R. F. Paige, A. Sch\"urr, J. F. Terwilliger and J. Weber, {\em Bi-directional transformations (bx) - Theory and Applications Across Disciplines}, [Online]. Available:  https://www.birs.ca/workshops/2013/13w5115/report13w5115.pdf.
 	
-	\bibitem{benchmark-BX} R. Oppermann and P. Robrecht, {\em Benchmarks for Bidirectional Transformations}, Seminar Maintaining Consistency in Model-Driven Engineering: Challenges and Techniques, University of Paderborn: Summer Term 2016.
+	\bibitem{benchmark-BX} R. Oppermann and P. Robrecht, {\em Benchmarks for Bidirectional Transformations}, Seminar on Maintaining Consistency in Model-Driven Engineering: Challenges and Techniques, University of Paderborn: Summer Term 2016.
 	
-	\bibitem{benchmarx} A. Anjorin, A. Cunha, H. Giese, F. Hermann, A. Rensink, and A. Sch\"urr, {\em Benchmarx}, In K. S. Candan, S. Amer-Yahia, N. Schweikardt, V. Christophides, and V. Leroy, (eds.). In Proc. of the Workshops of the EDBT/ICDT 2014 Joint Conference (EDBT/ICDT 2014), CEUR Workshop Proceedings, pages 82-86, 2014.
+	\bibitem{benchmarx} A. Anjorin, A. Cunha, H. Giese, F. Hermann, A. Rensink, and A. Sch\"urr, {\em Benchmarx}, In K. S. Candan, S. Amer-Yahia, N. Schweikardt, V. Christophides, and V. Leroy, (eds.). In Proc. of the EDBT/ICDT 2014 Joint Conference, CEUR Workshop, pages 82-86, 2014.
 		
-	\bibitem{benchmarx-reload} A. Anjorin, Z. Diskin, F. Jouault, Hsiang-Shang Ko, E. Leblebici, and B. Westfechtel, {\em Benchmarx Reloaded: A Practical Benchmark Framework for Bidirectional Transformations}, In R. Eramo, M. Johnson (eds.). In Proc. of the Sixth International Workshop on Bidirectional Transformations (Bx 2017),
+	\bibitem{benchmarx-reload} A. Anjorin, Z. Diskin, F. Jouault, Hsiang-Shang Ko, E. Leblebici, and B. Westfechtel, {\em Benchmarx Reloaded: A Practical Benchmark Framework for Bidirectional Transformations}, In R. Eramo, M. Johnson (eds.). In Proc. of the Sixth International Workshop on Bidirectional Transformations (BX 2017),
 	Uppsala, Sweden, April 29, 2017, published at http://ceur-ws.org.
 	
 	\bibitem{tgg} A. Sch\"urr. {\em Specification of graph translators with triple graph grammars}, In E. W. Mayr, G. Schmidt, and G. Tinhofer (eds.). In Proc. of the 20th International Workshop, Graph-Theoretic Concepts in Computer Science, WG 94, vol. 903, pages 151-163, Herrsching, Germany, June 1994.
 	
-	\bibitem{bx-tgg} A. Bucaioni and R. Eramo, {\em Understanding bidirectional transformations with TGGs and JTL}, In Proc. of the Second Workshop on Bidirectional Transformations (BX 2013), vol. 57, 2013.
+	\bibitem{bx-tgg} A. Bucaioni and R. Eramo, {\em Understanding bidirectional transformations with TGGs and JTL}, In Proc. of the Second International Workshop on Bidirectional Transformations (BX 2013), vol. 57, 2013.
 	
 	\bibitem{emoflon-part4} A. Anjorin, E. Burdon, F. Deckwerth, R. Kluge, L. Kliegel, M. Lauder, E. Leblebici, D.T\"ogel, D. Marx, L. Patzina, S. Patzina, A. Schleich, S. E. Zander, J. Reinl\"ander, and M. Wieber, {\em An Introduction to Metamodelling and Graph Transformations with eMoflon. Part IV: Triple Graph Grammars}, [Online]. Available: 
 	https://emoflon.github.io/eclipse-plugin/release/handbook/part4.pdf
@@ -26,7 +26,7 @@
 	
 	\bibitem{echo} N. Macedo, T. Guimar\"aes and A. Cunha, {\em Model repair and transformation with Echo}, In Proc. of ASE 2013, ACM Press, 2013.
 	
-	\bibitem{bigul} Hsiang-Shang Ko, Tao Zan, and Zhenjiang Hu, {\em BiGUL: A formally verified core language for putback-based bidirectional programming}, In Proc. of Partial Evaluation and Program Manipulation, pages 61-72, ACM, 2016.
+	\bibitem{bigul} Hsiang-Shang Ko, Tao Zan, and Zhenjiang Hu, {\em BiGUL: A formally verified core language for putback-based bidirectional programming}, In Proc. of Partial Evaluation and Program Manipulation, ACM, pages 61-72,  2016.
 	
 	\bibitem{bigul-tutorial} Z. Hu and H.-Shang Ko,  {\em Principle and Practice of Bidirectional Programming in BiGUL}, Tutorial [Online]. Available: http://www.prg.nii.ac.jp/project/bigul/tutorial.pdf
 	
@@ -38,7 +38,7 @@
 	
 	\bibitem{google-forms} {\em Google Forms}, [Online]. Available: https://www.google.com/forms/about/
 	
-	\bibitem{understanding-bx} A. Bucaioni and R. Eramo, {\em Understanding bidirectional transformations with TGGs and JTL}, In Proc. of the Second International Workshop on BX, 2013.
+	\bibitem{understanding-bx} A. Bucaioni and R. Eramo, {\em Understanding bidirectional transformations with TGGs and JTL}, In Proc. of the Second International Workshop on Bidirectional Transformations (BX 2013).
 	
 	\bibitem{modelsynchro-tgg} F. Hermann et al., {\em Model synchronization based on triple graph grammars: correctness, completeness and invertibility}, Software and Systems Modeling, vol. 14, pages 241-269, 2013.
 	
@@ -48,7 +48,7 @@
 	
 	\bibitem{mdsd} S. Beydeda, M. Book and V. Gruhn, {\em Model-Driven Software Development}, ACM Computing Classification, pages 1-8, 1998.
 	
-	\bibitem{modeltransform} S. Sendall and W. Kozaczynski, {\em Model transformation: the heart and soul of model-driven software development},  IEEE, vol. 20, Issue: 5, pages 42-45, Sept.-Oct. 2003.
+	\bibitem{modeltransform} S. Sendall and W. Kozaczynski, {\em Model transformation: the heart and soul of model-driven software development},  IEEE, vol. 20, issue 5, pages 42-45, September-October, 2003.
 	
 	\bibitem{designpattern} E. Gamma, R. Helm, R. Johnson and J. Vlissides, {\em Design Patterns}, Addison-Wesley, vol. 47, Boston Massachusetts USA, 1995.
 	
@@ -82,7 +82,7 @@
 	
 	\bibitem{validitythreatsinse} R. Feldt \& A. Magazinius, {\em Validity Threats in Empirical Software Engineering Research - An Initial Survey } , In Proc. of the International Conference on Software Engineering and Knowledge Engineering, issue March, pages 374-379, 2010.
 	
-	\bibitem{expinse} C. Wohlin, M. H\"ost, P. Runeson, M. Ohlsson, B. Regnell, and A. Wesslen, {\em Experimentation in software engineering: an introduction }, Kluwer Academic Publishers, 2000.
+	\bibitem{expinse} C. Wohlin, M. H\"ost, P. Runeson, M. Ohlsson, B. Regnell, and A. Wesslen, {\em Experimentation in software engineering: an introduction}, Kluwer Academic Publishers, 2000.
 	
 	
 \end{thebibliography}
