--- a/Final Documentation/Evaluation/Evaluation.tex
+++ b/Final Documentation/Evaluation/Evaluation.tex
@@ -6,14 +6,14 @@ The aim of this chapter is as follows:
 
 "Analyze the outcome of the usage of an interactive demonstrator for the purpose of evaluation with respect to the user from the point of view of the researcher in the context of teaching the basic concepts of bidirectional transformation (bx) and making them understandable and accessible."
 
-\subsection{Goals}\label{subsec:goals}  
-In any research, there could be many cases and each case could focus on a number of different research questions, each of which leads to a different direction in developing solution strategies~\cite{semethods}. Hence, for any evaluation process, most important thing are selecting cases that are most relevant to the research and narrowing down the research questions only associated with the exact problems in hand. 
-
-\begin{figure}
+\begin{figure}[h]
 	\includegraphics[width=1\textwidth]{figures/Evaluation_Phases}
 	\caption{Evaluation Phases}
 	\label{fig:Evaluation_Phases}
 \end{figure}
+
+\subsection{Goals}\label{subsec:goals}  
+In any research, there could be many cases and each case could focus on a number of different research questions, each of which leads to a different direction in developing solution strategies~\cite{semethods}. Hence, for any evaluation process, most important thing are selecting cases that are most relevant to the research and narrowing down the research questions only associated with the exact problems in hand. 
 
 \paragraph{Research Questions}
 Our experience based on teaching and cooperation with industry has led us to suspect that people often draw their intuition for desired synchronization behavior directly from the special case of bijections.
@@ -106,15 +106,6 @@ The Hypotheses described above helped in deciding the variables related to the e
 	\item Max. time interval to answer questions: 55 min
 \end{itemize}
 
-\paragraph{Dependent Variables} The dependent variables, which are likely to be changed in response to the independent variable are listed below:
-
-\begin{itemize}
-  \item Correctness score of pretest: ordinal
-  \item Correctness score of posttest: ordinal
-  \item Level of certainty of pretest:  interval
-  \item Level of certainty of posttest: interval
-\end{itemize}
-
 \begin{table}[h]
 	\centering	
 	\begin{tabular}{|p{4cm}|p{5cm}|p{6cm}|}
@@ -153,6 +144,15 @@ The Hypotheses described above helped in deciding the variables related to the e
 	\caption{Experimental Variables}
 	\label{tab:Experimental_Variables}
 \end{table}
+
+\paragraph{Dependent Variables} The dependent variables, which are likely to be changed in response to the independent variable are listed below:
+
+\begin{itemize}
+	\item Correctness score of pretest: ordinal
+	\item Correctness score of posttest: ordinal
+	\item Level of certainty of pretest:  interval
+	\item Level of certainty of posttest: interval
+\end{itemize}
 
 \subsubsection{Learning Goals \& Questions}\label{subsubsec:questions}
 To investigate the research questions \textbf{RQ 3} and its sub-question \textbf{RQ 3.1}, I chose five bx concepts to evaluate the learning goals (referred to as \textbf{LG} from now on) for the experiment. These concepts are related to the fundamentals of bx described as follows:
