--- a/Final Documentation/Final-Documentation.tex
+++ b/Final Documentation/Final-Documentation.tex
@@ -140,18 +140,20 @@
 					Consistency Management Approaches}} \\ 
 			\vspace{0,7cm}
 			{\Large Master's Thesis }\\[6pt]
-			Submitted to the Fakultät f\"ur EIM, Institut f\"ur Informatik\\
+			Submitted to the Software Engineering Research Group\\
 			in Partial Fulfillment of the Requirements for the\\
 			Degree of\\[6pt]
 			{\Large Master of Science}\\
 			\vspace{30pt}
-			\text{by} \\[2pt]
-			{\large Arjya Shankar Mishra}\\	
+			\text{by} \\[4pt]
+			{\large ARJYA SHANKAR MISHRA}\\
+			Alois Fuchs Weg 7\\
+			33098 Paderborn\\ 	
 			\vspace{50pt}
 			Supervisors:\\[2pt]
 			{\large Jun. Prof. Dr. Anthony Anjorin}\\[5pt]
 			{\large Prof. Dr. Gregor Engels}\\
-			\vspace{60pt}
+			\vspace{50pt}
 			{Paderborn, \today}
 					
 	\end{center}
