--- a/Final Documentation/Introduction/Introduction.tex
+++ b/Final Documentation/Introduction/Introduction.tex
@@ -40,7 +40,7 @@ To solve the problems as described in Section \ref{subsec:probstmt}, in this the
 \item {Teach bx concepts to a wide audience and make them accessible and understandable}
 \end{itemize}
 
-An existing bx tool is used as a part of the demonstrator to realize \textit{bidirectional transformation}. The final prototype is interactive and easily accessible to users to help them understand the potential, power, and limitations of bx.
+An existing bx tool has been used as a part of the demonstrator to realize \textit{bidirectional transformation}. The final prototype is interactive and easily accessible to users to help them understand the potential, power, and limitations of bx.
 
 \begin{figure}[h]
 	\centering
@@ -67,7 +67,7 @@ All of my contributions help to achieve the goal of this thesis i.e., a demonstr
 
 \subsection{Structure of Thesis}\label{subsec:structure}
 
-Chapter 1 (Introduction) contains the introduction and motivation about the thesis with a solution strategy. Chapter 2 discusses the related terminologies with respect to bidirectional transformation. Chapter 3 describes the requirements for implementing a successful bx demonstrator. Chapter 4 explains the related work that has been done on bx in last few years and their related problems. Chapter 5 describes all the high-level design details and decisions done for each layer along with UML diagrams during the implementation work. Chapter 6 contains the evaluation methodology and evaluation results. The last chapter summarizes all the work which was done as part of this thesis and draws conclusions followed by future work.
+Chapter 1 (Introduction) contains the introduction and motivation about the thesis with a solution strategy. Chapter 2 discusses the related terminologies with respect to bidirectional transformation. Chapter 3 describes the requirements for implementing a successful bx demonstrator. Chapter 4 explains the related work that has been done on bx in the last few years and their related problems. Chapter 5 describes all the high-level design and implementation details for the demonstrator along with UML diagrams. Chapter 6 contains the evaluation methodology and evaluation results. The last chapter summarizes all the work which was done as part of this thesis and draws conclusions followed by future work.
 
 \clearpage
 \section{Foundation}\label{sec:foundation}
