--- a/Final Documentation/Summary/Summary.tex
+++ b/Final Documentation/Summary/Summary.tex
@@ -5,8 +5,8 @@ In this chapter, I am going to conclude the entire work done in this thesis. Sec
 With this thesis, I tried to solve the problem of a missing platform for teaching bx concepts by designing and implementing an interactive demonstrator built on the top of a bx tool. The principal task was to design an application framework to communicate with bx tools and demonstrate their features on an interactive user interface. In the process of solving the problems stated earlier, the following were my contributions:
 
 \begin{enumerate}
-	\item {\textit{Analysis and design of an application framework}: I have designed a working, fully functional application framework based on MVC pattern by extending the interface designed for accessing bx tools by Anjorin et al. \cite{benchmarx-reload} for implementing a bx tool demonstrator along with an interactive user interface. This framework can be used to implement a demonstrator encapsulating bx tools with concrete examples. Also, it is easy to add additional scenarios to teach bx related concepts, fairly easy to add different versions of the rules used, fairly easy to swap the bx tool, and more or less easy to implement a new example as long as it can work with the user interface.}
-    \item {\textit{Concrete implementation of the demonstrator}: After analyzing the existing work on bx and their related problems as described in Section \ref{sec:relatedwork}, I designed the requirements of my demonstrator to overcome these problems. Afterward, I have implemented a fully functional online demonstrator based on the application framework designed earlier and checked its feasibility and validity. My demonstrator i.e., Demon-BX satisfies all the requirements listed in Section \ref{sec:requirements} and hence overcomes the identified problems with the existing demonstrator platform for bx. This demonstrator is based on a bx tool i.e., eMoflon and a concrete example leveraging the functionalities of the bx tool and explaining some basic bx concepts.}
+	\item {\textit{Analysis and design of an application framework}: I have designed a working, fully functional application framework based on MVC pattern by extending the interface designed for accessing bx tools by Anjorin et al. \cite{benchmarx-reload} for implementing a bx tool demonstrator along with an interactive user interface. This framework can be used to implement a demonstrator encapsulating bx tools with concrete examples. Also, it is easy to add additional scenarios to teach bx related concepts, fairly easy to add different versions of the rules used, more or less easy to swap the bx tool, and fairly easy to implement a new example as long as it can work with the user interface.}
+    \item {\textit{Concrete implementation of the demonstrator}: After analyzing the existing work on bx and their related problems as described in Section \ref{sec:relatedwork}, I designed the requirements for my demonstrator to overcome these problems. Afterward, I have implemented a fully functional online demonstrator based on the application framework designed earlier and checked its feasibility and validity. My demonstrator i.e., Demon-BX satisfies all the requirements listed in Section \ref{sec:requirements} and hence overcomes the identified problems with the existing demonstrator platform for bx. This demonstrator is based on a bx tool i.e., eMoflon and a concrete example leveraging the functionalities of the bx tool and explaining some basic bx concepts.}
     \item {\textit{Evaluation of the demonstrator}: After the implementation, I have evaluated the demonstrator based on the research method called Pretest-Posttest control group design~\cite{expandquasiexpdesign} to check its effectiveness and impact. This experiment was driven by three hypotheses and a few experimental variables i.e., dependent, independent, and controlled. A well-designed experiment was performed with two different groups of participants, data were collected and analyzed to measure the outcome. The results show that basic bx concepts are not well understood by the participants. However, it is challenging to teach bx concepts with a demonstrator but it might be possible to teach bx concepts with a demonstrator along with scenarios (guidance steps for the user) designed for all kinds of participants.}	
 \end{enumerate}
 
@@ -23,7 +23,7 @@ With these findings, I was able to answer the following research questions with 
 		From the work of my thesis, I feel that the most important requirements for implementing a successful bx demonstrator are the functional \& non-functional behaviors as described in Section \ref{sec:requirements}. For example that the user should able to initiate the synchronization process in both directions, the user should able to manipulate the models before synchronization, the example should be simple and fun to play with, the GUI should be interactive, zero setup time for the demonstrator, there is some interaction involved and perhaps decision making while playing with the example, the demonstrator should be accessible worldwide and platform independent, etc. \\
 		\hline
 		\textbf{RQ2 -} To what extent is such a bx demonstrator reusable? &
-		A few dimensions involved with the implementation of a bx demonstrator are (i) addition of different synchronization rules, (ii) visualization of different examples, and (iii) the ability to demonstrate the features of different bx tools. From the implementation work of my demonstrator, I can say that my application framework along with the extended interface for accessing the bx tools can be reused/extended to realize these dimensions. It is fairly easy to add different versions of the rules used, fairly easy to swap the bx tool, and more or less easy to implement a new example as long as it can work with the UI.\\
+		A few dimensions involved with the implementation of a bx demonstrator are (i) addition of different synchronization rules, (ii) visualization of different examples, and (iii) the ability to demonstrate the features of different bx tools. From the implementation work of my demonstrator, I can say that my application framework along with the extended interface for accessing the bx tools can be reused/extended to realize these dimensions. It is fairly easy to add different versions of the rules used, more or less easy to swap the bx tool, and fairly easy to implement a new example as long as it can work with the UI.\\
 		\hline
 		\textbf{RQ3 -} Is there a need to teach the concepts of bx through a demonstrator? &
 		It is evident from the outcome of the hypothesis H$_{OP1}$ (which corresponds to the research question \textbf{RQ3.1}) that the students derive their (in general wrong) intuition for and expectations of synchronization scenarios from the special case of bijections. Hence, there is indeed a need to teach correct expectations for synchronization scenarios and a demonstrator can be potentially very useful in spreading bx concepts.\\
@@ -44,7 +44,7 @@ With these findings, I was able to answer the following research questions with 
 \end{table}
 
 \subsection{Future Work}\label{subsec:futurework}
-In this thesis, I have designed an application framework for the bx tool demonstrator, implemented the demonstrator based on a concrete example, and further evaluated the demonstrator to check its effectiveness in order to teach bx concepts to a widespread audience to the best of my knowledge and belief. However, a few other features that were out-of-scope for this thesis can be added to the current work. In the following paragraphs, I discuss some enhancements that can be applied to my work in the future.
+In this thesis, I have designed an application framework for the bx tool demonstrator, implemented the demonstrator based on a concrete example, and further evaluated the demonstrator to check its effectiveness in order to teach bx concepts to a widespread audience to the best of my knowledge and belief. However, a few other features that were out-of-scope for this thesis can be added to the current work. In the following paragraphs, I have discussed some enhancements that can be applied to my work in the future.
  
 \paragraph{New Rules}
 My current implementation of the eMoflon tool is based on two meta models and five transformation rules. However, it will be interesting to add a few more transformation rules for the existing meta-models. It will surely enhance the interactivity of the demonstrator and also test the capability of UI on handling new rules.
@@ -55,7 +55,7 @@ My current implementation of the eMoflon tool is based on two meta models and fi
 Demon-BX is implemented encapsulating the features of the bx tool \texttt{eMoflon}. However, to test the extensibility of the application framework and the interface built for communicating with bx tools, implementation of another bx tool can be researched and added to the current work.
 
 \paragraph{BX Tool as a Webservice}
-In the current implementation of Demon-BX, the \texttt{Model} component in the application framework is built as a Java project. Due to a Java project, it has a very thin binding with the \texttt{Controller} component. Any changes in model component related to class name, method name and their accessibility will affect the implementation of the example specific adapter class. Hence, to remove this dependency, the model component can be designed and implemented as a web service. After that, the model can be seen as a plug-in component communicating through JSON/XML data, which completely removes its dependency on the controller component. Hence, any researcher can implement the synchronization with their tool and use the web service.
+In the current implementation of demon-bx, the \texttt{Model} component in the application framework is built as a Java project. Due to a Java project, it has a very thin binding with the \texttt{Controller} component. Any changes in model component related to class name, method name and their accessibility will affect the implementation of the example specific adapter class. Hence, to remove this dependency, the model component can be designed and implemented as a web service. After that, the model can be seen as a plug-in component communicating through JSON/XML data, which completely removes its dependency on the controller component. Hence, any researcher can implement the synchronization with their tool and use the web service.
 
 \paragraph{New Experiment}
 As per the research method Pretest-Posttest control group design~\cite{expandquasiexpdesign}, only treated group should be exposed to the treatment which the researcher wants to test. However, in my experiment, the control group was given the demonstrator without any scenarios and then asked to answer the posttest question. This might affect the final output as somehow control group was exposed to the demonstrator environment and can cause the same effect what treated group experienced with scenarios. Hence, a new experiment can be done by showing the control group only a video about bx concepts in relation with a concrete example instead of exposing them to the demonstrator environment.
